--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello World</title>
 </head>
 <body>
-<h1> this is sonika </h1>
+<h1> this is sonika, its a great day</h1>
 </body>
 </html>
